Update to slides.

--- a/SlideDeck/index.html
+++ b/SlideDeck/index.html
@@ -34,15 +34,15 @@
 			<div class="slides">
 
 				<section>
-					<h2>Best Practices Are Best Except When They're Not</h2>
+					<h2>Best Practices Are Best<br>...Except When They're Not</h2>
 					<p>Nolan Erck</p>
 					<p>South of Shasta Consulting</p>
 				</section>
 
 				<section>
-					<h2>About Me</h2>
+					<h2>Obligatory “About Me” Stuff</h2>
 					<ul>
-						<li>Owner, Chief Consultant: South of Shasta
+						<li>Owner, Chief Consultant at South of Shasta
 							<ul>
 								<li>Software Development, Training, Design</li>
 							</ul>
@@ -67,32 +67,29 @@
 				<section>
 					<h2>Today's Agenda</h2>
 					<ul>
-						<li>What is jQuery?</li>
-						<li>Installing jQuery</li>
-						<li>CSS &amp; Anonymous Functions Primer</li>
-						<li>Some Basic Examples</li>
-						<li>Events</li>
-						<li>Animation</li>
-						<li>Loops</li>
-						<li>Other Fun Stuff</li>
-						<li>Questions, etc</li>
+						<li>What is a “Best Practice”?</li>
+						<li>An Explanation of “Technical Debt”</li>
+						<li>Sometimes I've Had to Break The Rules</li>
+						<li>How To Fix Things Later</li>
+						<li>Other Resources</li>
 					</ul>
 				</section>
 
 
 				<section>
-					<h2>Other Info</h2>
+					<h2>Other Resources</h2>
 					<ul>
-						<li>jquery.com - official reference</li>
-						<li>Book: Learning jQuery, Packt Publishing</li>
-						<li>Stack Overflow</li>
-						<li>Bootstrap uses jQuery</li>
-						<li>For most browser compatibility use 1.x series</li>
+						<li>JoelOnSoftware.com</li>
+						<li>Ben Nadel's blog</li>
+						<li>“Secrets of the Rockstar Programmers”</li>
+						<li>“Head First Java”</li>
+						<li>“Head First Design Patterns”</li>
+						<li>Any “Head First” books, really.</li>
 					</ul>
 				</section>				
 
 				<section>
-					<h2>Questions? Comments?<br />Need Consulting?</h2>
+					<h2>Questions? Comments?<br />Need Consulting? ;)</h2>
 					<ul>
 						<li>southofshasta.com</li>
 						<li>nolan@southofshasta.com</li>
