Marking progress on moving slides from LibreOffice into HTML

--- a/SlideDeck/index.html
+++ b/SlideDeck/index.html
@@ -75,6 +75,52 @@
 					</ul>
 				</section>
 
+				<section>
+					<h2>Questions? Ask'em!</h2>
+					<ul>
+						<li>This might turn into a “round table” discussion.</li>
+						<li>That's Okay.</li>
+						<li>I'll “moderate” if need be.</li>
+					</ul>
+				</section>
+
+				<section>
+					<h2>I run a consulting business</h2>
+					<ul>
+						<li>Often includes taking over legacy projects.</li>
+						<li>Can't always rebuild from scratch.</li>
+						<li>Have to make decisions.</li>
+						<li>Developers are paid to solve problems</li>
+						<li>Does the client care how I solve it?</li>
+						<li>What can I fix, given the resource constraints?</li>
+					</ul>
+				</section>
+
+				<section>
+					<h2>I run a consulting business</h2>
+					<ul>
+						<li>Some factors to consider:
+							<ul>
+								<li>Being able to draw a line in the sand.</li>
+								<li>Good. Cheap. Quick.<br />Pick two.</li>
+								<li>The 80/20 Rule.</li>
+							</ul>
+						</li>
+					</ul>
+				</section>
+
+				<section>
+					<h2>I run a consulting business</h2>
+					<ul>
+						<li>Make it <em>work</em> now and make it elegant in version 2 if need be.</li>
+						<li>Do customers care <em>how</em> you did it? Or just <em>that</em> you did it?</li>
+					</ul>
+				</section>
+
+				<section>
+					<h2>What is a “Best Practice”?</h2>
+					<blockquote>Commercial or professional procedures that are accepted or prescribed as being correct or most effective.</blockquote>
+				</section>
 
 				<section>
 					<h2>Other Resources</h2>
