Updates to slide deck.

--- a/SlideDeck/index.html
+++ b/SlideDeck/index.html
@@ -123,6 +123,37 @@
 				</section>
 
 				<section>
+					<h2>What is a “Best Practice”?</h2>
+					<ul>
+						<li>But it is still a practice</li>
+						<li>The practice of medicine</li>
+						<li>Because sometimes...it's wrong</li>
+					</ul>
+				</section>
+
+				<section>
+					<h2>What is a “Best Practice”?</h2>
+					<ul>
+						<li>Today's “Best Practice” is tomorrow's “Bad Idea”.</li>
+						<li>Best Practices sometimes come and go quickly.</li>
+						<li>Good Practices might be better than Best Practices sometimes.</li>
+					</ul>
+				</section>
+
+				<section>
+					<h2>What is a “Best Practice”?</h2>
+					<ul>
+						<li>Your mileage may vary – deadlines are real</li>
+						<li>Client doesn't care what's recommended<br>Just want it how they want it</li>
+						<li>StackOverflow: “Well I would never do it THAT way!”</li>
+						<li>Reality: sometimes you HAVE to do it THAT way</li>
+					</ul>
+				</section>
+
+				<section data-background-image="./images/boydstoast1.png" data-background-size="contain">
+				</section>
+
+				<section>
 					<h2>Other Resources</h2>
 					<ul>
 						<li>JoelOnSoftware.com</li>
