Adding Boyd's Toast screenshots.

--- a/SlideDeck/index.html
+++ b/SlideDeck/index.html
@@ -153,6 +153,12 @@
 				<section data-background-image="./images/boydstoast1.png" data-background-size="contain">
 				</section>
 
+				<section data-background-image="./images/boydstoast2.png" data-background-size="contain">
+				</section>
+
+				<section data-background-image="./images/boydstoast3.png" data-background-size="contain">
+				</section>
+
 				<section>
 					<h2>Other Resources</h2>
 					<ul>
