Checking in the rest of the "port from LibreOffice". Everything is now in HTML.

--- a/SlideDeck/index.html
+++ b/SlideDeck/index.html
@@ -24,6 +24,11 @@
 			{ 
 				color: green 
 			}
+
+			.align-left
+			{
+				text-align: left;
+			}
 		</style>		
 	</head>
 
@@ -160,6 +165,124 @@
 				</section>
 
 				<section>
+					<h2>What is “Technical Debt”?</h2>
+					<ul>
+						<li>No project is perfect</li>
+						<li>Shortcuts are sometimes inevitable</li>
+						<li>Shortcuts cause “Technical Debt”</li>
+					</ul>
+				</section>
+
+				<section>
+					<h2>What is “Technical Debt”?</h2>
+					<ul>
+						<li>A dam has a leak.</li>
+						<li>Can stick a finger in the leak.</li>
+						<li>Eventually you run out of fingers.</li>
+						<li>Remove the brick and replace it.</li>
+					</ul>
+				</section>
+
+				<section>
+					<blockquote>StackOverflow: Well, I would never do it <em>that</em> way!</blockquote>
+					<blockquote>These are the times that I <em>had</em> to do it that way.</blockquote>
+				</section>
+
+				<section>
+					<h2>Some real-world bad situations</h2>
+					<ul>
+						<li>Don't do these things just because you don't know the right way.</li>
+						<li>This is not an excuse to write bad code or use bad practices.</li>
+						<li>Let's look at some stories...</li>
+					</ul>
+				</section>
+
+				<section>
+					<blockquote>When might you use CFML<br />Instead of CFScript?</blockquote>
+				</section>
+
+				<section>
+					<blockquote>When the client demands the ability to change HTML in the source code via FTP<br><br>...in Production!</blockquote>
+				</section>
+
+				<section>
+					<blockquote>ColdFusion: When I used CFForm/CFSelect on a recent project<br /><br />...and it was the right thing to do</blockquote>
+				</section>
+
+				<section>
+					<blockquote>When an open source MVC framework <em>wasn't</em> the right answer</blockquote>
+
+					<blockquote>and “rolling my own” framework was the correct decision</blockquote>
+				</section>
+
+				<section>
+					<blockquote>Is emailing errors to the team always a bad idea?</blockquote>
+					<blockquote>No.</blockquote>
+				</section>
+
+				<section>
+					<h2>When the problem isn't in code</h2>
+					<p class="align-left">
+						<em>So... my hands are completely  tied and I have to change all of the URL strings that are passed with "Alter" in them (of which there are many) to "altr".</em>
+						<br />-- Poor guy on a Google forum, recently
+					</p>
+				</section>
+
+				<section>
+					<h2>When the problem isn't in code</h2>
+					<ul>
+						<li>Find a stakeholder, outside of IT</li>
+						<li>Communicate the issue
+							<ul>
+								<li>In a non-technical way</li>
+								<li>Users have a lesser experience</li>
+								<li>Magic phrase: “Lower click-thru rate”</li>
+								<li>Magic phrase: “Lower conversion rate”</li>
+							</ul>
+						</li>
+					</ul>
+				</section>	
+
+				<section>
+					<h2>How To Fix Things Later</h2>
+					<ul>
+						<li>Start small if you have to.</li>
+						<li>Bootstrap: “works” fine in table-based websites. Minor side-effects, nothing crazy.</li>
+						<li>jQuery can just “sit there” for later.</li>
+						<li>LESS / SASS to refactor old CSS.</li>
+					</ul>
+				</section>
+
+				<section>
+					<h2>How To Fix Things Later</h2>
+					<ul>
+						<li>Source Control.</li>
+						<li>Task tracking / ticket systems.</li>
+						<li>Testing tools.</li>
+						<li>Tools for automating.</li>
+						<li>“I don't have time”.<br />– 30 minutes a day works wonders! Seriously.</li>
+					</ul>
+				</section>
+
+				<section>
+					<h2>How To Fix Things Later</h2>
+					<ul>
+						<li>Don't be afraid to ask questions.</li>
+						<li>Post on Google Groups, StackOverflow, whatever.</li>
+						<li>Talk to people at the conference!</li>
+					</ul>
+				</section>
+
+				<section>
+					<h2>How To Fix Things Later</h2>
+					<ul>
+						<li>“But when I post on StackOverflow, I get yelled at for doing it wrong!”</li>
+						<li>Senior Developer != Great Communicator</li>
+						<li>&lt;rant&gt;”how to ask questions”&lt;/rant&gt;</li>
+					</ul>
+				</section>
+
+				<section>
 					<h2>Other Resources</h2>
 					<ul>
 						<li>JoelOnSoftware.com</li>
@@ -169,7 +292,7 @@
 						<li>“Head First Design Patterns”</li>
 						<li>Any “Head First” books, really.</li>
 					</ul>
-				</section>				
+				</section>
 
 				<section>
 					<h2>Questions? Comments?<br />Need Consulting? ;)</h2>
