Adding PDF copy of slides.

--- a/SlideDeck/index.html
+++ b/SlideDeck/index.html
@@ -313,6 +313,12 @@
 
 		<script>
 			Reveal.initialize();
+
+			var link = document.createElement( 'link' );
+			link.rel = 'stylesheet';
+			link.type = 'text/css';
+			link.href = window.location.search.match( /print-pdf/gi ) ? '/Reveal.js/css/print/pdf.css' : '/Reveal.js/css/print/paper.css';
+			document.getElementsByTagName( 'head' )[0].appendChild( link );
 		</script>
 
 	</body>
