--- a/SlideDeck/index.html
+++ b/SlideDeck/index.html
@@ -49,7 +49,7 @@
 					<ul>
 						<li>Owner, Chief Consultant at South of Shasta
 							<ul>
-								<li>Software Development, Training, Design</li>
+								<li>Software Development</li>
 							</ul>
 						</li>
 
@@ -119,6 +119,7 @@
 					<ul>
 						<li>Make it <em>work</em> now and make it elegant in version 2 if need be.</li>
 						<li>Do customers care <em>how</em> you did it? Or just <em>that</em> you did it?</li>
+						<li>(Ever install an iPhone update and see "general bug fixes" in the change log?)</li>
 					</ul>
 				</section>
 
@@ -285,22 +286,27 @@
 				<section>
 					<h2>Other Resources</h2>
 					<ul>
+						<li>South of Shasta Consulting
+							<ul>
+								<li>
+									Training on "real world" development, consulting on hard problems, 
+									a fresh set of eyes, advice, etc.
+								</li>
+							</ul>
+						</li>
 						<li>JoelOnSoftware.com</li>
 						<li>Ben Nadel's blog</li>
 						<li>“Secrets of the Rockstar Programmers”</li>
-						<li>“Head First Java”</li>
-						<li>“Head First Design Patterns”</li>
-						<li>Any “Head First” books, really.</li>
+						<li>Any “Head First” books<br>(Java, Design Patterns, etc).</li>
 					</ul>
 				</section>
 
 				<section>
-					<h2>Questions? Comments?<br />Need Consulting? ;)</h2>
+					<h2>Questions? Comments?</h2>
 					<ul>
 						<li>southofshasta.com</li>
 						<li>nolan@southofshasta.com</li>
-						<li>Twitter: @southofshasta</li>
-						<li>Github: nolanerck</li>
+						<li>Twitter: @southofshasta, Github: nolanerck</li>
 					</ul>
 					<p>Thanks!</p>
 				</section>
