Minor slide updates.

--- a/SlideDeck/index.html
+++ b/SlideDeck/index.html
@@ -55,7 +55,7 @@
 
 						<li>ColdFusion, C++, Java, jQuery, PHP, .NET, HTML5, Android, SQL, etc...</li>
 						<li>Manager, SacInteractive User Group</li>
-						<li>Reformed Video Game Developer (Grim Fandango, SimPark, StarWars Rogue Squadron, etc).</li>
+						<li>Reformed Video Game Developer (Grim Fandango, SimPark, StarWars Rogue Squadron, etc)</li>
 						<li>Music Junkie</li>
 					</ul>
 				</section>
@@ -70,13 +70,19 @@
 				</section>
 
 				<section>
+					<h2>Slide deck is here</h2>
+					<p>github.com/nolanerck/best-practices-are-best-preso</p>
+				</section>
+
+				<section>
 					<h2>Today's Agenda</h2>
 					<ul>
+						<li>Problems in software development are real things.</li>
 						<li>What is a “Best Practice”?</li>
-						<li>An Explanation of “Technical Debt”</li>
-						<li>Sometimes I've Had to Break The Rules</li>
-						<li>How To Fix Things Later</li>
-						<li>Other Resources</li>
+						<li>An Explanation of “Technical Debt”.</li>
+						<li>Sometimes I've Had to Break The Rules.</li>
+						<li>How To Fix Things Later.</li>
+						<li>Other Resources.</li>
 					</ul>
 				</section>
 
@@ -84,7 +90,7 @@
 					<h2>Questions? Ask'em!</h2>
 					<ul>
 						<li>This might turn into a “round table” discussion.</li>
-						<li>That's Okay.</li>
+						<li>That's okay.</li>
 						<li>I'll “moderate” if need be.</li>
 					</ul>
 				</section>
@@ -95,8 +101,8 @@
 						<li>Often includes taking over legacy projects.</li>
 						<li>Can't always rebuild from scratch.</li>
 						<li>Have to make decisions.</li>
-						<li>Developers are paid to solve problems</li>
-						<li>Does the client care how I solve it?</li>
+						<li>Developers are paid to solve problems.</li>
+						<li>Does the client care how I solve it?.</li>
 						<li>What can I fix, given the resource constraints?</li>
 					</ul>
 				</section>
@@ -131,9 +137,9 @@
 				<section>
 					<h2>What is a “Best Practice”?</h2>
 					<ul>
-						<li>But it is still a practice</li>
-						<li>The practice of medicine</li>
-						<li>Because sometimes...it's wrong</li>
+						<li>But it is still a practice.</li>
+						<li>The practice of medicine.</li>
+						<li>Because sometimes...it's wrong.</li>
 					</ul>
 				</section>
 
@@ -149,11 +155,15 @@
 				<section>
 					<h2>What is a “Best Practice”?</h2>
 					<ul>
-						<li>Your mileage may vary – deadlines are real</li>
-						<li>Client doesn't care what's recommended<br>Just want it how they want it</li>
+						<li>Your mileage may vary – deadlines are real.</li>
+						<li>Client doesn't care what's recommended<br>Just want it how they want it.</li>
 						<li>StackOverflow: “Well I would never do it THAT way!”</li>
-						<li>Reality: sometimes you HAVE to do it THAT way</li>
+						<li>Reality: sometimes you HAVE to do it THAT way.</li>
 					</ul>
+				</section>
+
+				<section>
+					<h2>Clients sometimes try to be hands-on,<br />outside of their skill level.</h2>
 				</section>
 
 				<section data-background-image="./images/boydstoast1.png" data-background-size="contain">
@@ -168,9 +178,9 @@
 				<section>
 					<h2>What is “Technical Debt”?</h2>
 					<ul>
-						<li>No project is perfect</li>
-						<li>Shortcuts are sometimes inevitable</li>
-						<li>Shortcuts cause “Technical Debt”</li>
+						<li>No project is perfect.</li>
+						<li>Shortcuts are sometimes inevitable.</li>
+						<li>Shortcuts cause “Technical Debt”.</li>
 					</ul>
 				</section>
 
@@ -199,7 +209,7 @@
 				</section>
 
 				<section>
-					<blockquote>When might you use CFML<br />Instead of CFScript?</blockquote>
+					<blockquote>When might you use &lt;CFML&gt;<br />Instead of CFScript?</blockquote>
 				</section>
 
 				<section>
@@ -207,13 +217,13 @@
 				</section>
 
 				<section>
-					<blockquote>ColdFusion: When I used CFForm/CFSelect on a recent project<br /><br />...and it was the right thing to do</blockquote>
+					<blockquote>ColdFusion: When I used CFForm/CFSelect on a recent project<br /><br />...and it was the right thing to do.</blockquote>
 				</section>
 
 				<section>
 					<blockquote>When an open source MVC framework <em>wasn't</em> the right answer</blockquote>
 
-					<blockquote>and “rolling my own” framework was the correct decision</blockquote>
+					<blockquote>and “rolling my own” framework was the correct decision.</blockquote>
 				</section>
 
 				<section>
@@ -222,7 +232,7 @@
 				</section>
 
 				<section>
-					<h2>When the problem isn't in code</h2>
+					<h2>When the problem isn't in code.</h2>
 					<p class="align-left">
 						<em>So... my hands are completely  tied and I have to change all of the URL strings that are passed with "Alter" in them (of which there are many) to "altr".</em>
 						<br />-- Poor guy on a Google forum, recently
@@ -235,10 +245,10 @@
 						<li>Find a stakeholder, outside of IT</li>
 						<li>Communicate the issue
 							<ul>
-								<li>In a non-technical way</li>
-								<li>Users have a lesser experience</li>
-								<li>Magic phrase: “Lower click-thru rate”</li>
-								<li>Magic phrase: “Lower conversion rate”</li>
+								<li>In a non-technical way.</li>
+								<li>Users have a lesser experience.</li>
+								<li>Magic phrase: “Lower click-thru rate”.</li>
+								<li>Magic phrase: “Lower conversion rate”.</li>
 							</ul>
 						</li>
 					</ul>
@@ -277,7 +287,7 @@
 				<section>
 					<h2>How To Fix Things Later</h2>
 					<ul>
-						<li>“But when I post on StackOverflow, I get yelled at for doing it wrong!”</li>
+						<li>“But when I post on StackOverflow,<br />I get yelled at for doing it wrong!”</li>
 						<li>Senior Developer != Great Communicator</li>
 						<li>&lt;rant&gt;”how to ask questions”&lt;/rant&gt;</li>
 					</ul>
@@ -306,7 +316,8 @@
 					<ul>
 						<li>southofshasta.com</li>
 						<li>nolan@southofshasta.com</li>
-						<li>Twitter: @southofshasta, Github: nolanerck</li>
+						<li>Twitter: @southofshasta</li>
+						<li>Github: nolanerck</li>
 					</ul>
 					<p>Thanks!</p>
 				</section>
