Minor slide updates.

--- a/SlideDeck/index.html
+++ b/SlideDeck/index.html
@@ -49,7 +49,7 @@
 					<ul>
 						<li>Owner, Chief Consultant at South of Shasta
 							<ul>
-								<li>Software Development</li>
+								<li>Software Development, Training</li>
 							</ul>
 						</li>
 
@@ -123,9 +123,9 @@
 				<section>
 					<h2>I run a consulting business</h2>
 					<ul>
-						<li>Make it <em>work</em> now and make it elegant in version 2 if need be.</li>
 						<li>Do customers care <em>how</em> you did it? Or just <em>that</em> you did it?</li>
-						<li>(Ever install an iPhone update and see "general bug fixes" in the change log?)</li>
+						<li>Make it <em>work</em> now and make it elegant in version 2 if need be.</li>
+						<li>(Ever install a mobile app update and see "general bug fixes" in the change log?)</li>
 					</ul>
 				</section>
 
@@ -202,8 +202,8 @@
 				<section>
 					<h2>Some real-world bad situations</h2>
 					<ul>
-						<li>Don't do these things just because you don't know the right way.</li>
-						<li>This is not an excuse to write bad code or use bad practices.</li>
+						<li>Don't do these things just because<br />you don't know the right way.</li>
+						<li>This is not an excuse to write bad code<br />or use bad practices.</li>
 						<li>Let's look at some stories...</li>
 					</ul>
 				</section>
