Slide updates per feedback from NCDevCon.

--- a/SlideDeck/index.html
+++ b/SlideDeck/index.html
@@ -255,6 +255,15 @@
 				</section>	
 
 				<section>
+					<h2>When the problem isn't in code</h2>
+					<ul>
+						<li>Tell the client "no".</li>
+						<li>Get rid of the client.</li>
+						<li>(Obviously there are other concerns to factor in here.</li>
+					</ul>
+				</section>
+
+				<section>
 					<h2>How To Fix Things Later</h2>
 					<ul>
 						<li>Start small if you have to.</li>
